--- a/_posts/projects/_posts/2011-01-03-prodori.markdown
+++ b/_posts/projects/_posts/2011-01-03-prodori.markdown
@@ -4,6 +4,15 @@ title: Prodori
 category: project
 summary: An elegant site suited for the high-end jewelry market.
 ---
+Prodori
+=======
+
+Prodori is an elegant site designed to compete in the jewelry market.
+
+<div class="img full">
+<img src="/images/projects/prodori/front.jpg" />
+</div>
+
 Heading 1
 =========
 
@@ -28,8 +37,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at erat non purus
 Object.implement({
 
   toString: function(target) {
-    target = target || this;
-    return JSON.encode(this);
+	target = target || this;
+	return JSON.encode(this);
   }
 
 });
@@ -56,23 +65,23 @@ Aenean sem lectus, dapibus et gravida ut, interdum ut nunc. Nunc ornare sollicit
 <img src="/images/half_04.jpg" />
 </div>
 
-*   List
-*   Items in List
-*   More and More
-*   Stuff
-    *   Here's the nested stuff.
-    *   Nested list
-    *   More nested
-    *   How's it look?
-*   More
+*	List
+*	Items in List
+*	More and More
+*	Stuff
+	*	Here's the nested stuff.
+	*	Nested list
+	*	More nested
+	*	How's it look?
+*	More
 
-1.   Numbered List
-1.   Items in List
-1.   More and More
-1.   Stuff
-    1.   Nested List?
-    1.   Nested Numbered list
-    1.   One
-    1.   Five
-1.   More
+1.	 Numbered List
+1.	 Items in List
+1.	 More and More
+1.	 Stuff
+	1.	 Nested List?
+	1.	 Nested Numbered list
+	1.	 One
+	1.	 Five
+1.	 More
 
