Added a test flag to post so they're hidden from live site, and added the ActionScript3.js page

--- a/_posts/projects/_posts/2011-01-01-test.markdown
+++ b/_posts/projects/_posts/2011-01-01-test.markdown
@@ -1,19 +1,8 @@
 ---
 layout: project
-title: Prodori
-category: project
-summary: An elegant site suited for the high-end jewelry market.
+title: Test Styles
 tags: test
 ---
-Prodori
-=======
-
-Prodori is an elegant site designed to compete in the jewelry market.
-
-<div class="img full">
-<img src="/images/projects/prodori/front.jpg" />
-</div>
-
 Heading 1
 =========
 
