--- a/_posts/projects/_posts/2011-01-03-prodori.markdown
+++ b/_posts/projects/_posts/2011-01-03-prodori.markdown
@@ -3,12 +3,13 @@ layout: project
 title: Prodori
 category: project
 summary: An elegant site suited for the high-end jewelry market.
-tags: test
 ---
 Prodori
 =======
 
 Prodori is an elegant site designed to compete in the jewelry market.
+
+I did not design the site; I made it work.
 
 <div class="img full">
 <img src="/images/projects/prodori/front.jpg" />
@@ -17,7 +18,7 @@ Prodori is an elegant site designed to compete in the jewelry market.
 About the Project
 -----------------
 
-This company likes to use home-grown solutions. The entire Prodori site is built using a homegrown PHP5 MVC framework very similar to Yii.
+This company likes to use home-grown solutions. The entire Prodori site is built using a homegrown PHP5 MVC framework very similar to [Yii](http://yiiframework.com "Yii -- perhaps the most awesome php framework yet").
 
 My contributions include:
 
@@ -25,6 +26,18 @@ My contributions include:
 *	Integrating Prodori's shopping cart into the existing inventory systems.
 *	Implementing backend tools for customer service and sales staff to maintain the site and its resources.
 *	Implementing much of the front-end, such as integrating existing jQuery plugins &amp; writing javascript to power the interface.
+
+Here's some screenshots of interface elements I worked on:
+
+<div class="img half left">
+<img src="/images/projects/prodori/login-form.jpg" />
+</div>
+<div class="img half right">
+<img src="/images/projects/prodori/scrollbars.jpg" />
+</div>
+<div class="img full left">
+<img src="/images/projects/prodori/store-filters.jpg" />
+</div>
 
 A notable exception to the use of homegrown solutions is in the use of javascript. One of the original goals was to provide a very fluid, 
 animated browsing experience without flash. We relied heavily on jQuery and its rich plugin ecosystem.
