Added resume + finessed styles. Began coding styles in less.css

--- a/_posts/projects/_posts/2011-01-01-test.markdown
+++ b/_posts/projects/_posts/2011-01-01-test.markdown
@@ -54,6 +54,7 @@ Aenean sem lectus, dapibus et gravida ut, interdum ut nunc. Nunc ornare sollicit
 <div class="img half right">
 <img src="/images/half_04.jpg" />
 </div>
+<div class="clear-both"></div>
 
 *	List
 *	Items in List
