--- a/_posts/projects/_posts/2011-01-03-prodori.markdown
+++ b/_posts/projects/_posts/2011-01-03-prodori.markdown
@@ -3,6 +3,7 @@ layout: project
 title: Prodori
 category: project
 summary: An elegant site suited for the high-end jewelry market.
+tags: hidden
 ---
 Prodori
 =======
