--- a/_posts/projects/_posts/2011-01-05-as3-js.markdown
+++ b/_posts/projects/_posts/2011-01-05-as3-js.markdown
@@ -2,13 +2,14 @@
 layout: project
 title: ActionScript3.js
 category: project
+tags: hidden
 summary: A javascript port of the ActionScript 3 API (work-in-progress)
 ---
 
 ActionScript3.js
 ================
 
-This project started off as a curiosity. Would it be possible to port the ActionScript 3 api to JavaScript? 
+This project started off as a curiosity. Would it be possible to port the ActionScript 3 api to JavaScript?
 
 You can read more about it at the [github project page][1].
 
@@ -32,7 +33,7 @@ child.graphics.drawRect(125, 25, 40, 20);
 child.graphics.endFill();
 {% endhighlight %}
 
-Here is a screenshot of the `Graphics_Test.html` running as of 2011, September 14. 
+Here is a screenshot of the `Graphics_Test.html` running as of 2011, September 14.
 The code above is responsible for drawing the 3 rectangles you see below.
 I know the shapes are not very interesting, but I find it fascinating that javascript is drawing to the canvas using the as3 api :)
 
@@ -44,7 +45,7 @@ I know the shapes are not very interesting, but I find it fascinating that javas
 Personal
 ========
 
-I have a special place in my heart for ActionScript (but not for Flash and its dev tools.) Something about it, and more specifically the ECMAScript style, really works for me. 
+I have a special place in my heart for ActionScript (but not for Flash and its dev tools.) Something about it, and more specifically the ECMAScript style, really works for me.
 Now that I'm using javascript 100% of the time I'd like to have the power of ActionScript's API in a plugin-less environment.
 
 [1]: https://github.com/somethingkindawierd/AS3.js-proof-of-concept
